# opengl_practice

./: LICENSE  README.md
DOOM/: CMakeLists.txt  build.sh
DOOM/shaders/: debugDepthMapFrag.glsl  debugDepthMapVertex.glsl  depthFragShader.glsl  litShader.fs  litShader.glsl  skyboxShader.vs  unlitShader.fs  unlitShader.glsl  vertexShader.glsl  vertexShader.vs
DOOM/src/: loadshaders.cpp  main.cpp  material.h  shaderManager.h
DOOM/src/lights/: area.h  light.h  spot.h
DOOM/src/loaders/: cubeMapLoader.cpp  objFileLoader.cpp
DOOM/src/objects/: camera.h  cube.h  mesh.h  object.h  plane.h  smoothCamera.h  sprite.h
DOOM/textures/simple_skybox/: bottom.tga  top.tga
Tetris/: .clangd  CMakeLists.txt
Tetris/.cache/clangd/index/: glad.h.BB8CB2F563848802.idx  glfw3.h.37C61A45B6A97F3A.idx  khrplatform.h.45CC7CB770BC16C9.idx  linmath.h.6030AB62C7D7E137.idx  main.cpp.7AE95F8B81BC6256.idx
Tetris/include/glad/: glad.c
Tetris/src/: main.cpp
TriangleTest/: build.sh
TriangleTest/include/glad/: glad.h
TriangleTest/lib/glad/: glad.c
